card's wraps in our-groups fixed

--- a/css/style.css
+++ b/css/style.css
@@ -514,7 +514,7 @@ img {
   width: 30.42%;
   min-width: 296px;
   min-height: 321px;
-  margin-right: 0;
+  margin-right: 40px;
   margin-bottom: 30px;
   border-radius: 12px;
   border: 3px solid #7B97F6;
